fixing avatar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ section h2 {
   width: 100%;
   max-width: 400px;
   border-radius: 1000px;
+  margin: 0 auto;
 }
 
 header.masthead {
